environments/staging/mongodb-statefulsets.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: mongodb
  serviceName: mongodb
  template:
    spec:
      containers:
        - name: mongodb
          imagePullPolicy: IfNotPresent
