environments/staging/passport-status-api-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: passport-status-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: passport-status-api
      app.kubernetes.io/component: api
  template:
    spec:
      containers:
        - name: passport-status-api
          resources:
            limits:
              cpu: 4000m
              memory: 4096Mi
