environments/staging/artemis-deployments.yaml
#Temporary until we figure out how to auto provision the ingress with the ActiveMQArtemis spec.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-status-amq-wconsj
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    # TLS secret 'devdpinternaldtsstncom' is provisioned by the cluster platform.
    - secretName: devdpinternaldtsstncom
      hosts:
        - passport-status-amq-wconsj-0-staging.dev-dp-internal.dts-stn.com
  rules:
    - host: passport-status-amq-wconsj-0-staging.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-amq-staging-wconsj-0-svc
                port:
                  name: wconsj-0
