environments/staging/passport-status-api-ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: passport-status-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    # TLS secret 'devdpinternaldtsstncom' is provisioned by the cluster platform.
    - secretName: devdpinternaldtsstncom
      hosts:
        - passport-status-api-staging.dev-dp-internal.dts-stn.com
  rules:
    - host: passport-status-api-staging.dev-dp-internal.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-api
                port:
                  name: http

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: public-passport-status-api
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    # TLS secret 'devdpdtsstncom' is provisioned by the cluster platform.
    - secretName: devdpdtsstncom
      hosts:
        - passport-status-api-staging.dev-dp.dts-stn.com
  rules:
    - host: passport-status-api-staging.dev-dp.dts-stn.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: passport-status-api
                port:
                  name: http
